styles.css
:root {
    --light-font-color: #FFF;
    --dark-font-color: #000;
    --background-color: #000;
    --num-cols: 6;
}

/* BEGIN CSS RESET; https://www.joshwcomeau.com/css/custom-css-reset/ */

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
    box-sizing: border-box;
}

/*
  2. Remove default margin
*/
* {
    margin: 0;
}

/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

/*
  5. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

/*
  6. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
    font: inherit;
}

/*
  7. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/*
  8. Create a root stacking context
*/
#root,
#__next {
    isolation: isolate;
}

/* END CSS RESET */

a {
    color: inherit;
}

html,
body {
    height: 100vh;
    width: 100vw;
}

html {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    overflow: hidden;
    background: radial-gradient(circle farthest-side at 50% 120%, #F79540 20%, #FC4F00 40%, #B71375 60%, #8B1874 80%, #962ac5 95%);
}

body {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

section {
    background-color: var(--background-color);
    color: var(--light-font-color);

    border-radius: 20px;
    padding: 1em;
    font-size: 1.25em;
    max-width: 80%;

    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 1em;
}

#links {
    display: grid;
    grid-template-columns: repeat(var(--num-cols), auto);
    grid-auto-flow: row;
    gap: 1em;
}

.icon {
    width: calc(50px + 1vw);
    color: var(--light-font-color)
}

#fine-print {
    position: absolute;
    left: 1em;
    bottom: 1em;

    text-decoration: none;
    font-weight: bolder;
}

@media only screen and (max-width: 600px) {
    :root {
        --num-cols: 3;
    }
}

@media only screen and (max-width: 300px) {
    :root {
        --num-cols: 2;
    }
}

